cabal-version: 3.0
name:          async-components
version:       0.1.1.0
synopsis:      Async components for building concurrent server processes.
bug-reports:   https://github.com/input-output-hk/marlowe-cardano/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   async-components

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  exposed-modules:
    Control.Concurrent.Component
    Control.Concurrent.Component.Probes
    Control.Concurrent.Component.Run

  build-depends:
    , base >=4.9 && <5
    , co-log >=0.5.0.0 && <0.6.0.0
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras ==0.1.1.0
    , eventuo11y-otel ^>=0.1
    , exceptions ^>=0.10
    , general-allocate ^>=0.2
    , hs-opentelemetry-api ==0.0.3.6
    , hs-opentelemetry-sdk ==0.0.3.4
    , mtl >=2.2 && <3
    , servant ^>=0.19
    , servant-client ^>=0.19
    , servant-server ^>=0.19
    , transformers ^>=0.5.6
    , unliftio ^>=0.2.1
    , warp >=3.3 && <4
