cabal-version:       >=1.10

name:                base-deriving-via
version:             0.1.0.1
synopsis:            A general hook newtype for use with deriving via
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           IOHK
build-type:          Simple

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Widentities
    -Wredundant-constraints
    -Wmissing-export-lists
  if (!flag(development))
    ghc-options:
      -Werror

  exposed-modules:
                        Data.DerivingVia
                        Data.DerivingVia.GHC.Generics.Monoid
                        Data.DerivingVia.GHC.Generics.Semigroup

  build-depends:        base
