cabal-version:      >=1.10
name:               bech32
version:            1.1.4.1
license:            Apache-2.0
license-file:       LICENSE
copyright:          2017 Marko Bencun, 2019-2023 IOHK
maintainer:
    operations@iohk.io, erikd@mega-nerd.com, jonathan.knowles@iohk.io

author:             IOHK Engineering Team
homepage:           https://github.com/input-output-hk/bech32
bug-reports:        https://github.com/input-output-hk/bech32/issues
synopsis:
    Implementation of the Bech32 cryptocurrency address format (BIP 0173).

description:
    Implementation of the Bech32 cryptocurrency address format documented in the
    BIP (Bitcoin Improvement Proposal) 0173.

category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/bech32.git

flag release
    description: Strict compiler warning checks.
    default:     False
    manual:      True

flag static
    description: Try to build a static executable.
    default:     False
    manual:      True

library
    exposed-modules:
        Codec.Binary.Bech32
        Codec.Binary.Bech32.Internal

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options:        -Wall -Wcompat -fwarn-redundant-constraints
    build-depends:
        array,
        base >=4.11.1.0 && <5,
        bytestring,
        containers,
        extra,
        text

    if flag(release)
        ghc-options: -Werror

executable bech32
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Paths_bech32
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -fwarn-redundant-constraints -threaded -rtsopts
        -with-rtsopts=-N

    build-depends:
        base,
        base58-bytestring,
        bech32,
        bytestring,
        extra,
        memory,
        optparse-applicative,
        prettyprinter,
        prettyprinter-ansi-terminal,
        text

    if flag(release)
        ghc-options: -Werror

    if flag(static)
        cc-options:  -static
        ld-options:  -static -pthread
        ghc-options: -static

test-suite bech32-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-tools:      hspec-discover >=0, bech32 >=0
    hs-source-dirs:   test
    other-modules:
        AppSpec
        Codec.Binary.Bech32Spec

    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        base58-bytestring,
        bech32,
        bytestring,
        containers,
        deepseq,
        extra,
        hspec,
        memory,
        process,
        QuickCheck >=2.12,
        text,
        vector

    if flag(release)
        ghc-options: -Werror
