cabal-version: 3.8
name: cardano-api
version: 10.17.0.0
synopsis: The cardano API
description: The cardano API.
category:
  Cardano,
  API,

copyright: 2020-2024 Input Output Global Inc (IOG).
author: IOHK
maintainer: operations@iohk.io
license: Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common project-config
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  build-depends: base >=4.14 && <4.22
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

common maybe-unix
  if !os(windows)
    build-depends: unix

common maybe-Win32
  if os(windows)
    build-depends: Win32

common text
  if os(osx)&& arch(aarch64)
    build-depends: text >=1.2.5.0
  else
    build-depends: text >=2.0

library
  import: project-config, maybe-unix, maybe-Win32, text
  hs-source-dirs:
    src

  -- Do not expose any additional modules. The correct way
  -- to expose new functionality is via Cardano.Api
  exposed-modules:
    Cardano.Api
    Cardano.Api.Address
    Cardano.Api.Block
    Cardano.Api.Byron
    Cardano.Api.Certificate
    Cardano.Api.Compatible
    Cardano.Api.Compatible.Tx
    Cardano.Api.Consensus
    Cardano.Api.Crypto.Ed25519Bip32
    Cardano.Api.Era
    Cardano.Api.Error
    Cardano.Api.Experimental
    Cardano.Api.Experimental.Era
    Cardano.Api.Experimental.Plutus
    Cardano.Api.Experimental.Simple.Script
    Cardano.Api.Experimental.Tx
    Cardano.Api.Genesis
    Cardano.Api.Governance
    Cardano.Api.HasTypeProxy
    Cardano.Api.Hash
    Cardano.Api.IO
    Cardano.Api.Key
    Cardano.Api.Ledger
    Cardano.Api.LedgerState
    Cardano.Api.Monad.Error
    Cardano.Api.Network
    Cardano.Api.Network.IPC
    Cardano.Api.Parser.Text
    Cardano.Api.Plutus
    Cardano.Api.Pretty
    Cardano.Api.ProtocolParameters
    Cardano.Api.Query
    Cardano.Api.Serialise.Bech32
    Cardano.Api.Serialise.Cbor
    Cardano.Api.Serialise.Cbor.Canonical
    Cardano.Api.Serialise.Cip129
    Cardano.Api.Serialise.DeserialiseAnyOf
    Cardano.Api.Serialise.Json
    Cardano.Api.Serialise.Raw
    Cardano.Api.Serialise.SerialiseUsing
    Cardano.Api.Serialise.TextEnvelope
    Cardano.Api.Tx
    Cardano.Api.UTxO
    Cardano.Api.Value

  build-depends:
    FailT,
    aeson >=1.5.6.0,
    aeson-pretty >=0.8.5,
    attoparsec,
    base16-bytestring >=1.0,
    base58-bytestring,
    base64-bytestring,
    basement,
    bech32 >=1.1.0,
    bytestring,
    bytestring-trie,
    cardano-addresses ^>=4.0.0,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.2.1,
    cardano-crypto-wrapper ^>=1.6,
    cardano-data >=1.0,
    cardano-ledger-allegra >=1.7,
    cardano-ledger-alonzo >=1.13,
    cardano-ledger-api >=1.11,
    cardano-ledger-babbage >=1.11,
    cardano-ledger-binary >=1.6,
    cardano-ledger-byron >=1.1,
    cardano-ledger-conway >=1.19,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.17,
    cardano-ledger-mary >=1.8,
    cardano-ledger-shelley >=1.16,
    cardano-protocol-tpraos >=1.4,
    cardano-slotting >=0.2.0.0,
    cardano-strict-containers >=0.1,
    cborg,
    containers,
    contra-tracer,
    crypton,
    data-default-class,
    deepseq,
    directory,
    either,
    errors,
    extra,
    filepath,
    formatting,
    groups,
    iproute,
    memory,
    microlens,
    microlens-aeson,
    mono-traversable,
    mtl,
    network,
    network-mux,
    nothunks,
    ordered-containers,
    ouroboros-consensus ^>=0.27,
    ouroboros-consensus-cardano ^>=0.25.1,
    ouroboros-consensus-diffusion ^>=0.23,
    ouroboros-consensus-protocol ^>=0.12,
    ouroboros-network,
    ouroboros-network-api >=0.14,
    ouroboros-network-framework,
    ouroboros-network-protocols >=0.14,
    parsec,
    plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib} ^>=1.45,
    prettyprinter,
    prettyprinter-ansi-terminal,
    prettyprinter-configurable ^>=1.36,
    random,
    safe-exceptions,
    scientific,
    serialise,
    singletons,
    small-steps ^>=1.1,
    sop-core,
    sop-extras,
    stm,
    strict-sop-core,
    time,
    transformers,
    transformers-except ^>=0.1.3,
    typed-protocols ^>=0.3,
    vector,
    yaml,

  other-modules:
    Cardano.Api.Byron.Internal.Key
    Cardano.Api.Byron.Internal.Proposal
    Cardano.Api.Certificate.Internal
    Cardano.Api.Certificate.Internal.DRepMetadata
    Cardano.Api.Certificate.Internal.OperationalCertificate
    Cardano.Api.Certificate.Internal.StakePoolMetadata
    Cardano.Api.Consensus.Internal.InMode
    Cardano.Api.Consensus.Internal.Mode
    Cardano.Api.Consensus.Internal.Protocol
    Cardano.Api.Consensus.Internal.Reexport
    Cardano.Api.Era.Internal.Case
    Cardano.Api.Era.Internal.Core
    Cardano.Api.Era.Internal.Eon.AllegraEraOnwards
    Cardano.Api.Era.Internal.Eon.AlonzoEraOnwards
    Cardano.Api.Era.Internal.Eon.BabbageEraOnwards
    Cardano.Api.Era.Internal.Eon.ByronToAlonzoEra
    Cardano.Api.Era.Internal.Eon.Convert
    Cardano.Api.Era.Internal.Eon.ConwayEraOnwards
    Cardano.Api.Era.Internal.Eon.MaryEraOnwards
    Cardano.Api.Era.Internal.Eon.ShelleyBasedEra
    Cardano.Api.Era.Internal.Eon.ShelleyEraOnly
    Cardano.Api.Era.Internal.Eon.ShelleyToAllegraEra
    Cardano.Api.Era.Internal.Eon.ShelleyToAlonzoEra
    Cardano.Api.Era.Internal.Eon.ShelleyToBabbageEra
    Cardano.Api.Era.Internal.Eon.ShelleyToMaryEra
    Cardano.Api.Era.Internal.Feature
    Cardano.Api.Experimental.Plutus.Internal.IndexedPlutusScriptWitness
    Cardano.Api.Experimental.Plutus.Internal.Script
    Cardano.Api.Experimental.Plutus.Internal.ScriptWitness
    Cardano.Api.Experimental.Plutus.Internal.Shim.LegacyScripts
    Cardano.Api.Experimental.Tx.Internal.AnyWitness
    Cardano.Api.Experimental.Tx.Internal.Certificate
    Cardano.Api.Experimental.Tx.Internal.TxScriptWitnessRequirements
    Cardano.Api.Genesis.Internal
    Cardano.Api.Genesis.Internal.Parameters
    Cardano.Api.Governance.Internal.Action.ProposalProcedure
    Cardano.Api.Governance.Internal.Action.VotingProcedure
    Cardano.Api.Governance.Internal.Metadata.Anchor
    Cardano.Api.Governance.Internal.Metadata.DrepRegistration
    Cardano.Api.Governance.Internal.Metadata.GovAction
    Cardano.Api.Governance.Internal.Metadata.Validation
    Cardano.Api.Governance.Internal.Poll
    Cardano.Api.IO.Internal.Base
    Cardano.Api.IO.Internal.Compat
    Cardano.Api.IO.Internal.Compat.Posix
    Cardano.Api.IO.Internal.Compat.Win32
    Cardano.Api.Internal.Orphans
    Cardano.Api.Internal.Orphans.Misc
    Cardano.Api.Internal.Orphans.Serialisation
    Cardano.Api.Internal.Utils
    Cardano.Api.Key.Internal
    Cardano.Api.Key.Internal.Class
    Cardano.Api.Key.Internal.Mnemonic
    Cardano.Api.Key.Internal.Praos
    Cardano.Api.Key.Internal.SomeAddressVerificationKey
    Cardano.Api.Ledger.Internal.Reexport
    Cardano.Api.LedgerState.Internal.ConvertLedgerEvent
    Cardano.Api.LedgerState.Internal.LedgerEvent
    Cardano.Api.LedgerState.Internal.Rule.BBODY.DELEGS
    Cardano.Api.LedgerState.Internal.Rule.BBODY.LEDGER
    Cardano.Api.LedgerState.Internal.Rule.BBODY.UTXOW
    Cardano.Api.LedgerState.Internal.Rule.TICK.NEWEPOCH
    Cardano.Api.LedgerState.Internal.Rule.TICK.RUPD
    Cardano.Api.Network.IPC.Internal
    Cardano.Api.Network.IPC.Internal.ChainSync.Client
    Cardano.Api.Network.IPC.Internal.ChainSync.ClientPipelined
    Cardano.Api.Network.IPC.Internal.Monad
    Cardano.Api.Network.IPC.Internal.Version
    Cardano.Api.Network.Internal.NetworkId
    Cardano.Api.Network.Internal.Reexport
    Cardano.Api.Plutus.Internal
    Cardano.Api.Plutus.Internal.Script
    Cardano.Api.Plutus.Internal.ScriptData
    Cardano.Api.Pretty.Internal.ShowOf
    Cardano.Api.Query.Internal.Convenience
    Cardano.Api.Query.Internal.Expr
    Cardano.Api.Query.Internal.Type.DebugLedgerState
    Cardano.Api.Query.Internal.Type.DelegationsAndRewards
    Cardano.Api.Query.Internal.Type.QueryInMode
    Cardano.Api.Serialise.TextEnvelope.Internal
    Cardano.Api.Serialise.TextEnvelope.Internal.Cddl
    Cardano.Api.Tx.Internal.Body
    Cardano.Api.Tx.Internal.Body.Lens
    Cardano.Api.Tx.Internal.BuildTxWith
    Cardano.Api.Tx.Internal.Convenience
    Cardano.Api.Tx.Internal.Fee
    Cardano.Api.Tx.Internal.Output
    Cardano.Api.Tx.Internal.Sign
    Cardano.Api.Tx.Internal.TxIn
    Cardano.Api.Tx.Internal.TxMetadata
    Cardano.Api.Value.Internal
    Cardano.Api.Value.Internal.Parser

library gen
  import: project-config
  visibility: public
  hs-source-dirs: gen
  exposed-modules:
    Test.Gen.Cardano.Api
    Test.Gen.Cardano.Api.Byron
    Test.Gen.Cardano.Api.Era
    Test.Gen.Cardano.Api.Hardcoded
    Test.Gen.Cardano.Api.Metadata
    Test.Gen.Cardano.Api.ProtocolParameters
    Test.Gen.Cardano.Api.Typed
    Test.Gen.Cardano.Crypto.Seed
    Test.Hedgehog.Golden.ErrorMessage
    Test.Hedgehog.Roundtrip.Bech32
    Test.Hedgehog.Roundtrip.CBOR

  build-depends:
    Diff,
    QuickCheck,
    aeson >=1.5.6.0,
    base16-bytestring,
    bytestring,
    cardano-api,
    cardano-binary >=1.6 && <1.8,
    cardano-crypto-class ^>=2.2.1,
    cardano-crypto-test ^>=1.6,
    cardano-ledger-alonzo:{cardano-ledger-alonzo, testlib} >=1.8.1,
    cardano-ledger-byron-test >=1.5,
    cardano-ledger-conway:testlib,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-shelley >=1.13,
    containers,
    directory,
    filepath,
    hedgehog >=1.1,
    hedgehog-extras,
    hedgehog-quickcheck,
    tasty,
    tasty-hedgehog,
    text,

test-suite cardano-api-test
  import: project-config
  hs-source-dirs: test/cardano-api-test
  main-is: cardano-api-test.hs
  type: exitcode-stdio-1.0
  build-depends:
    FailT,
    QuickCheck,
    aeson >=1.5.6.0,
    base16-bytestring,
    bytestring,
    cardano-api,
    cardano-api:gen,
    cardano-binary,
    cardano-crypto,
    cardano-crypto-class ^>=2.2.1,
    cardano-crypto-test ^>=1.6,
    cardano-crypto-tests ^>=2.2,
    cardano-ledger-alonzo,
    cardano-ledger-api >=1.9,
    cardano-ledger-binary,
    cardano-ledger-conway,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-mary,
    cardano-protocol-tpraos,
    cardano-slotting,
    cborg,
    containers,
    data-default,
    directory,
    hedgehog >=1.1,
    hedgehog-extras,
    hedgehog-quickcheck,
    interpolatedstring-perl6,
    microlens,
    mtl,
    ouroboros-consensus,
    ouroboros-consensus-cardano,
    ouroboros-consensus-protocol,
    plutus-ledger-api,
    tasty,
    tasty-hedgehog,
    tasty-quickcheck,
    text,
    time,

  other-modules:
    Test.Cardano.Api.Address
    Test.Cardano.Api.Bech32
    Test.Cardano.Api.CBOR
    Test.Cardano.Api.Crypto
    Test.Cardano.Api.Envelope
    Test.Cardano.Api.EpochLeadership
    Test.Cardano.Api.Eras
    Test.Cardano.Api.Experimental
    Test.Cardano.Api.Genesis
    Test.Cardano.Api.GovAnchorValidation
    Test.Cardano.Api.IO
    Test.Cardano.Api.Json
    Test.Cardano.Api.KeysByron
    Test.Cardano.Api.Ledger
    Test.Cardano.Api.Metadata
    Test.Cardano.Api.Ord
    Test.Cardano.Api.Orphans
    Test.Cardano.Api.RawBytes
    Test.Cardano.Api.Transaction.Autobalance
    Test.Cardano.Api.Transaction.Body.Plutus.Scripts
    Test.Cardano.Api.TxBody
    Test.Cardano.Api.Value

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

test-suite cardano-api-golden
  import: project-config
  hs-source-dirs: test/cardano-api-golden
  main-is: cardano-api-golden.hs
  type: exitcode-stdio-1.0
  build-depends:
    aeson,
    base64-bytestring,
    bech32 >=1.1.0,
    bytestring,
    cardano-api,
    cardano-api:gen,
    cardano-binary,
    cardano-crypto-class ^>=2.2.1,
    cardano-data >=1.0,
    cardano-ledger-alonzo,
    cardano-ledger-api >=1.9,
    cardano-ledger-binary,
    cardano-ledger-core:{cardano-ledger-core, testlib} >=1.14,
    cardano-ledger-shelley,
    cardano-ledger-shelley-test >=1.2.0.1,
    cardano-protocol-tpraos,
    containers,
    errors,
    filepath,
    hedgehog >=1.1,
    hedgehog-extras ^>=0.7,
    microlens,
    plutus-core ^>=1.45,
    plutus-ledger-api,
    tasty,
    tasty-hedgehog,
    text,
    time,

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T"

  build-tool-depends: tasty-discover:tasty-discover
  other-modules:
    Test.Golden.Cardano.Api.Genesis
    Test.Golden.Cardano.Api.Ledger
    Test.Golden.Cardano.Api.Script
    Test.Golden.Cardano.Api.Value
    Test.Golden.ErrorsSpec
